[package]
name = "ktmm"
version = "0.2.0"
edition = "2019"
authors = ["Andrew O", "Ataiva.com"]
description = "Keep That Mouse Moving - Prevents system sleep by making periodic mouse movements"
readme = "README.md"
license = "MIT"
homepage = "https://ataiva.com/keep-that-mouse-moving/"
repository = "https://github.com/ao/ktmm"
documentation = "https://github.com/ao/ktmm"
keywords = ["utility", "mouse", "automation", "system", "idle"]
categories = ["command-line-utilities", "os"]

[dependencies]
enigo = "0.1.3"
device_query = "1.1.3"  # For getting mouse position
signal-hook = "0.3.15"  # For signal handling on Unix-like systems
ctrlc = "3.2.5"         # For signal handling on Windows
clap = { version = "4.3.0", features = ["derive"] }  # For command-line argument parsing

[dev-dependencies]
mockall = "0.11.4"      # For mocking in tests
